--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.5.21",
+    "vue-awesome-notifications": "^2.2.9",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
